--- a/style/animation.css
+++ b/style/animation.css
@@ -63,6 +63,18 @@
 .sub1_1 .section3 .center-box{ opacity: 0; }
 .sub1_1 .section3.on .center-box{ animation: fadeIn 0.5s ease-in-out 0s 1 forwards running; }
 
+.sub4_1 .step-section h3{ opacity: 0; }
+.sub4_1 .step-section.on h3{ animation: fadeIn 0.5s ease-in-out 0s 1 forwards running; }
+.sub4_1 .step-section .sub-content-div{ opacity: 0; }
+.sub4_1 .step-section.on .sub-content-div{ animation: fadeIn 0.5s ease-in-out 0.1s 1 forwards running; }
+.sub4_1 .step-section .item-list > li{ opacity: 0; }
+.sub4_1 .step-section.on .item-list > li:nth-child(1){ animation: fadeIn 0.5s ease-in-out 0.2s 1 forwards running; }
+.sub4_1 .step-section.on .item-list > li:nth-child(2){ animation: fadeIn 0.5s ease-in-out 0.3s 1 forwards running; }
+.sub4_1 .step-section.on .item-list > li:nth-child(3){ animation: fadeIn 0.5s ease-in-out 0.4s 1 forwards running; }
+.sub4_1 .step-section.on .item-list > li:nth-child(4){ animation: fadeIn 0.5s ease-in-out 0.5s 1 forwards running; }
+
+
+
 
 @keyframes bounce {
     0%   { transform: translateY(0); opacity: 0.6; }
