--- a/style/style.css
+++ b/style/style.css
@@ -322,7 +322,8 @@ h2 .text b{ font-weight: 700; }
 .main .section5 .fp-overflow{ overflow: unset; }
 .main .section5 .item{ height: 100%; border-bottom: 1px solid #917962; }
 .main .section5 .item .img-div{ height: 280px; position: relative; overflow: hidden; }
-.main .section5 .item .img-div .real{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-size: cover; background-repeat: no-repeat; background-position: center; }
+.main .section5 .item .img-div .real{ transition: transform .3s; position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-size: cover; background-repeat: no-repeat; background-position: center; }
+.main .section5 .item:hover .img-div .real{ transform: scale(1.1); }
 .main .section5 .item .content-div{ padding: 20px 30px 30px 30px; }
 .main .section5 .item .name{ position: relative; padding-left: 15px; font-size: 20px; font-weight: 700; color: #474747;  }
 .main .section5 .item .name::before{ content: ''; position: absolute; left: 0; top: 0; width: 4px; height: 100%; background-color: #473D33; }
