--- a/style/style.css
+++ b/style/style.css
@@ -211,20 +211,22 @@ footer .box2 .copy-right{ font-size: 14px; color: #808285; }
 h2 .text{ line-height: 1.5em; font-size: 34px; }
 h2 .text b{ font-weight: 700; }
 .main .section3 .slide-wrap{ margin-top: 60px; position: relative; display: flex; align-items: center; justify-content: center; }
+.main .section3 .slide-wrap .three-box{ width: 100%; display: grid; grid-template-columns: repeat(3,1fr); grid-gap: 20px; }
 .main .section3 .slide-wrap .swiper{ width: 100%; }
 .main .section3 .slide-wrap .btn-wrap{ display: flex; align-items: center; justify-content: space-between; position: absolute; width: calc(100% + 90px); left: -45px; }
 .main .section3 .slide-wrap .btn-wrap .pn-btn{ background: transparent; border: none; position: relative; z-index: 2; }
 .main .section3 .slide-wrap .swiper{ overflow: hidden; }
-.main .section3 .slide-wrap .item{ display: flex; flex-direction: column; align-items: center; justify-content: center; color: #fff; border: 1px solid #DCD9D3; padding: 66px 20px; text-align: center; }
+.main .section3 .slide-wrap .item{ min-width: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #fff; border: 1px solid #DCD9D3; padding: 66px 20px; text-align: center; }
 .main .section3 .slide-wrap .item .bar{ width: 40px; height: 1px; background-color: #DCD9D3; }
 .main .section3 .slide-wrap .item .subject{ margin-top: 24px; font-weight:700; font-size: 30px; }
 .main .section3 .slide-wrap .item .content{ margin-top: 24px;  }
-.main .section3 .slide-wrap .item .more-btn{ margin-top: 24px; display: inline-block; border-radius: 4px; padding: 7px 15px; background-color: rgba(145, 121, 98, 0.50); }
-
+.main .section3 .slide-wrap .item .more-btn{ transition: background-color .5s; margin-top: 24px; display: inline-block; border-radius: 4px; padding: 17px 26px; background-color: rgba(145, 121, 98, 0.50); }
+.main .section3 .slide-wrap .item:hover .more-btn{ background-color: #473D33; }
+.main .section3 .mo{ display: none; }
 
 @media screen and (max-width: 1300px) {
     .main .section3 { overflow: hidden; }
-    .main .section3 .slide-wrap{ padding: 0 50px; overflow: unset; }
+    .main .section3 .slide-wrap{ padding: 0; overflow: unset; }
     .main .section3 .slide-wrap .btn-wrap{ width: 100%; left: 0; }
     .main .section3 .slide-wrap .item{ padding: 4vw 20px; }
     .main .section3 .slide-wrap .swiper{ overflow: unset; }
@@ -232,6 +234,9 @@ h2 .text b{ font-weight: 700; }
 }
 @media screen and (max-width: 1250px) {
     .main .section3 .slide-wrap .item .subject{ font-size: 24px; }
+
+    .main .section3 .pc{ display: none !important; }
+    .main .section3 .mo{ display: block; }
 }
 @media screen and (max-width: 950px) {
     .main .section3{ padding: 100px 0; min-height: unset !important; }
@@ -248,7 +253,7 @@ h2 .text b{ font-weight: 700; }
     .main .section3 .slide-wrap .item{ padding: 30px 10px; }
     .main .section3 .slide-wrap .item .subject{ font-size: 20px; margin-top: 15px; }
     .main .section3 .slide-wrap .item .content{ font-size: 14px; margin-top: 15px; }
-    .main .section3 .slide-wrap .item .more-btn{ margin-top: 15px; }
+    .main .section3 .slide-wrap .item .more-btn{ margin-top: 15px; padding: 7px 15px; font-size: 14px; }
 }
 
 
